kustomize/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: alertmanager-webhook-telegram-python
  labels:
    app: alertmanager-webhook-telegram-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-webhook-telegram-python
  template:
    metadata:
      labels:
        app: alertmanager-webhook-telegram-python
    spec:
      containers:
        - name: alertmanager-webhook-telegram-python
          image: reg.pflaeging.net/k8s-tools/alertmanager-webhook-telegram-python:production
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext: 
            seccompProfile: 
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: '200m'
              memory: '20Mi'
            limits:
              cpu: '400m'
              memory: '100Mi'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
